--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
     "@types/config": "0.0.34",
+    "@types/jest": "^24.0.6",
     "@types/node": "^10.3.4",
-    "jest": "^22.4.2",
+    "jest": "^24.1.0",
     "nodemon": "^1.17.1",
-    "ts-jest": "^22.0.4",
+    "ts-jest": "^24.0.0",
     "ts-node": "^5.0.0",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2"
@@ -31,7 +32,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "config": "^1.30.0",
-    "moleculer": "^0.12.8",
+    "moleculer": "^0.13.6",
     "moleculer-decorators": "^1.0.14"
   }
 }
